--- a/HellionExtendedServer/NLog.config
+++ b/HellionExtendedServer/NLog.config
@@ -30,10 +30,13 @@
     -->
 
     <target name="console" xsi:type="ColoredConsole"
-      layout="${date:format=HH\:mm\:ss}|${level}|${stacktrace}|${message}" />
-    
+      layout="${date:format=HH\:mm\:ss}|${message}" />
+        
     <target name="file" xsi:type="File" fileName="${basedir}/logs/errorlog.txt"
-      layout="${stacktrace} ${message}" />
+      layout="${date:format=HH\:mm\:ss}|${level}|${stacktrace}|${message}" />
+
+    <target name="chatlogfile" xsi:type="File" fileName="${basedir}/logs/chatlog.txt"
+      layout="${date:format=HH\:mm\:ss}|${message}" />
   </targets>
 
   <rules>
@@ -43,7 +46,8 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
-    <logger name="*" minlevel="Info" writeTo="console" />
-    <logger name="*" minlevel="Trace" writeTo="file" />
+    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Error" writeTo="file" />
+    <logger name="HellionExtendedServer.Controllers.NetworkController" minlevel="Info" writeTo="chatlogfile" />
   </rules>
 </nlog>
