--- a/HellionExtendedServer.Common/NLog.config
+++ b/HellionExtendedServer.Common/NLog.config
@@ -32,10 +32,10 @@
     <target name="console" xsi:type="ColoredConsole"
       layout="${date:format=HH\:mm\:ss}|${message}" />
         
-    <target name="file" xsi:type="File" fileName="${basedir}/logs/errorlog.txt"
+    <target name="file" xsi:type="File" fileName="${basedir}/hes/logs/errorlog.txt"
       layout="${date:format=HH\:mm\:ss}|${level}|${stacktrace}|${message}" />
 
-    <target name="chatlogfile" xsi:type="File" fileName="${basedir}/logs/chatlog.txt"
+    <target name="chatlogfile" xsi:type="File" fileName="${basedir}/hes/logs/chatlog.txt"
       layout="${date:format=HH\:mm\:ss}|${message}" />
   </targets>
 
