--- a/HellionExtendedServer/App.config
+++ b/HellionExtendedServer/App.config
@@ -9,7 +9,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <runtime>
-      <useLegacyJit enabled="1"/>
+        <useLegacyJit enabled="1"/>
+          <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <probing privatePath="hes\bin;" />
+        </assemblyBinding>
     </runtime>
     <userSettings>
         <HellionExtendedServer.Properties.Settings>
@@ -21,4 +24,9 @@
             </setting>
         </HellionExtendedServer.Properties.Settings>
     </userSettings>
+    <system.net>
+        <settings>
+          <httpWebRequest useUnsafeHeaderParsing = "true"/>
+        </settings>
+    </system.net>
 </configuration>
