--- a/HellionExtendedServer/Plugins/TestPlugin/TestPlugin/TestPlugin.csproj
+++ b/HellionExtendedServer/Plugins/TestPlugin/TestPlugin/TestPlugin.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="HELLION_Dedicated">
       <HintPath>..\..\..\..\GameLibraries\HELLION_Dedicated.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,10 +52,12 @@
     <ProjectReference Include="..\..\..\..\HellionExtendedServer.Common\HellionExtendedServer.Common.csproj">
       <Project>{05bb1df9-3f9d-4170-984b-f90dd8ac83ac}</Project>
       <Name>HellionExtendedServer.Common</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\..\HellionExtendedServer.csproj">
       <Project>{c0c5b3ff-d475-4237-ab7d-69851f591a22}</Project>
       <Name>HellionExtendedServer</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
