--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -128,6 +128,11 @@
   <ItemGroup>
     <Compile Include="CrashDump.cs" />
     <Compile Include="Managers\Commands\Vanilla Commands\Status.cs" />
+    <Compile Include="Managers\Event\Event.cs" />
+    <Compile Include="Managers\Event\EventAttribute.cs" />
+    <Compile Include="Managers\Event\EventHelper.cs" />
+    <Compile Include="Managers\Event\EventListener.cs" />
+    <Compile Include="Managers\Event\Player\SpawnEvent.cs" />
     <Compile Include="Modules\Config.cs" />
     <Compile Include="Modules\Folders.cs" />
     <Compile Include="Modules\Localization.cs" />
@@ -209,6 +214,7 @@
       <HintPath>..\packages\dbghelp.dll</HintPath>
     </NativeReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>@echo off
