--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Managers\Event\EventAttribute.cs" />
     <Compile Include="Managers\Event\EventHelper.cs" />
     <Compile Include="Managers\Event\EventListener.cs" />
+    <Compile Include="Managers\Event\Player\PlayerSpawnEvent.cs" />
     <Compile Include="Managers\Event\Player\SpawnEvent.cs" />
     <Compile Include="Modules\Config.cs" />
     <Compile Include="Modules\Folders.cs" />
