--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -130,7 +130,10 @@
     <Compile Include="Managers\Event\EventHelper.cs" />
     <Compile Include="Managers\Event\EventListener.cs" />
     <Compile Include="Managers\Event\EventSystem2.cs" />
-    <Compile Include="Managers\Event\Player\GenericEvent.cs" />
+    <Compile Include="Managers\Event\GenericEvent.cs" />
+    <Compile Include="Managers\JoinEvent.cs" />
+    <Compile Include="Managers\Permission.cs" />
+    <Compile Include="Managers\PermissionManager.cs" />
     <Compile Include="Modules\Config.cs" />
     <Compile Include="Modules\Folders.cs" />
     <Compile Include="Modules\Localization.cs" />
