--- a/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
+++ b/HellionExtendedServer.Common/HellionExtendedServer.Common.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Reference Include="NLog">
       <HintPath>..\GameLibraries\NLog.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
